<resources>
    <string name="app_name" translatable="false">MobileCam</string>
    <string name="action_search">Search</string>
    <string name="action_setting">Settings</string>
    <string name="preview">Preview</string>
    <string name="capture">capture</string>
    <string name="mpb">Multiple Playback</string>
    <string name="spb">Single Playback</string>
    <string name="camera_setting">Settings</string>
    <string name="invalid_device">Please download correct APP</string>
    <string name="title_car_mode">Dashcam Mode</string>
    <string name="setting_slow_mo">Slow-Motion Function</string>
    <string name="setting_on">ON</string>
    <string name="setting_off">OFF</string>
    <string name="setting_timelapse_set">Please turn off Timelapse before setting this value</string>
    <string name="setting_car_mode_set">Please turn off Dashcam mode before setting this value</string>
    <string name="setting_burst_set">Please turn off Burst Capture before setting this value</string>
    <string name="setting_slow_motion_set">Please turn off Slow Motion before setting this value</string>
    <string name="stream_title">Camera Preview</string>
    <string name="stream_set_complete">Set Success</string>
    <string name="stream_set_timer">Set Self Timer</string>
    <string name="stream_set_timer_off">Off</string>
    <string name="stream_set_res_vid">Set Video Resolution</string>
    <string name="stream_set_res_photo">Set Photo Resolution</string>
    <string name="stream_set_error">Set Failed</string>
    <string name="ptp_connected">PTP Connected</string>
    <string name="stream_error_cannot_open_gallery">Disabled when capturing or recording</string>
    <string name="stream_error_capturing">Taking pictures...</string>
    <string name="stream_error_not_enough_space">Out of memory space</string>
    <string name="stream_error_recording">Recording videos...</string>
    <string name="stream_error_capturing_capture">Processing...</string>
    <string name="stream_capturing">Taking pictures...</string>
    <string name="stream_capture_failed">Failed to take photo, please retry</string>
    <string name="stream_wait_for_video">Please wait</string>
    <string name="stream_exit_wait">Please wait</string>
    <string name="stream_exit_recording">Press again to stop recording</string>
    <string name="stream_exiting">Quit</string>
    <string name="stream_failed">Wi-Fi signal poor, please move mobile phone close to Camera and reconnect</string>
    <string name="stream_reconnect">Reconnect</string>
    <string name="stream_zoom_wait">Processing...</string>
    <string name="setting">Processing</string>
    <string name="setting_yes">Yes</string>
    <string name="setting_no">No</string>
    <string name="setting_power_supply">Power frequency</string>
    <string name="setting_format">Format SD card</string>
    <string name="setting_format_confirm">Format SD card</string>
    <string name="setting_format_desc">All SD card data will be removed, Continue?</string>
    <string name="setting_formating">Processing...</string>
    <string name="setting_formatted">Format done</string>
    <string name="setting_capture_delay">Delay taking pictures</string>
    <string name="setting_image_size">Image size</string>
    <string name="setting_video_size">Video size</string>
    <string name="title_burst">Continuous Shooting</string>
    <string name="setting_burst_interval">Delay timer</string>
    <string name="setting_cap_timescape_interval">Timelapse Interval</string>
    <string name="setting_cap_timescape_duration">Timelapse Duration</string>
    <string name="setting_vid_timescape_interval">Video Timelapse Interval</string>
    <string name="setting_vid_timescape_duration">Video Timelapse Duration</string>
    <string name="setting_datestamp">Date Stamp</string>
    <string name="setting_about">About</string>
    <string name="setting_app_version">App Version</string>
    <string name="setting_product_name">Product Name</string>
    <string name="setting_firmware_version">Software Version</string>
    <string name="title_awb">White Balance</string>
    <string name="dialog_no_sd">No SD card, please insert one and retry</string>
    <string name="setting_no_sd">No SD card to format</string>
    <string name="dialog_refreshing">Refreshing Wi-Fi...</string>
    <string name="dialog_connect_failed">Connection failed, please retry.</string>
    <string name="dialog_failed">Operation failed!</string>
    <string name="dialog_capturing">Taking pictures</string>
    <string name="dialog_preview">Preview Loading...</string>
    <string name="dialog_connecting">Connecting...</string>
    <string name="dialog_connecting_to_cam">Connecting to camera...</string>
    <string name="dialog_reconnect">Reconnecting</string>
    <string name="dialog_configuring">Configuring, please wait...</string>
    <string name="dialog_invalid_ap">Failed to connect to a camera, please select another Wi-Fi!</string>
    <string name="dialog_deleting">Deleting...</string>
    <string name="dialog_delete_failed_single">Delating failed</string>
    <string name="dialog_deleting_failed_multi">Deleting failed, $1$ items not deleted,please check whether files are locked or not</string>
    <string name="dialog_downloading">Downloading $1$/$2$...</string>
    <string name="dialog_downloaded">$2$ photos downloaded to $3$</string>
    <string name="dialog_downloaded_2">$2$ items downloaded to $3$</string>
    <string name="dialog_downloaded_skipped">$2$ photos downloaded.(Skipped $1$ videos and $4$ downloaded photos)</string>
    <string name="dialog_downloaded_skipped_2">$2$ items downloaded.(Skipped $1$ downloaded items)</string>
    <string name="dialog_downloaded_single">Photo has been downloaded to $1$</string>
    <string name="dialog_downloading_single">Downloading...</string>
    <string name="dialog_cancel_downloading_succeeded">Succeeded to cancel downloading</string>
    <string name="dialog_cancel_downloading_failed">Failed to cancel downloading</string>
    <string name="dialog_wifi_lost">Cannot connect to Wi-Fi, please retry.</string>
    <string name="dialog_btn_reconnect">Reconnect</string>
    <string name="dialog_btn_continue">Continue</string>
    <string name="dialog_btn_exit">Exit</string>
    <string name="dialog_not_enough_space">Mobile phone does not have enough storage, please delete some files and restart.</string>
    <string name="dialog_recording_card_full">Warning: SD card full, video recording stopped.</string>
    <string name="dialog_sd_card_is_full">Warning: SD card full!</string>
    <string name="dialog_card_error">SD card error!</string>
    <string name="dialog_card_not_exist">SD card is not inserted, cannot perform Camera fuctions.</string>
    <string name="dialog_card_inserted">SD card inserted</string>
    <string name="dialog_card_removed">SD card removed</string>
    <string name="dialog_card_full">SD card full</string>
    <string name="dialog_card_lose">SD card lost!</string>
    <string name="dialog_timeout">Connection to camera failed, please ensure Wi-Fi connection is working.</string>
    <string name="ok">OK</string>
    <string name="gallery_view_video_not_supported">Video preview not supported</string>
    <string name="gallery_download_video_not_supported">Video file download not supported</string>
    <string name="gallery_no_image">No files to download</string>
    <string name="gallery_selection_count">$1$/$2$ Selected</string>
    <string name="gallery_delete_des">Confirm deleting $1$ files?</string>
    <string name="gallery_download_msg">Confirm download $1$ files?</string>
    <string name="gallery_download_with_vid_msg">Total Files: $1$,Download Time: $2$ mins and $3$ seconds,Confirm download?</string>
    <string name="gallery_download_pic_msg">Confirm download $1$ pictures?</string>
    <string name="gallery_download_msg_2">Confirm download $1$ files?($2$ skipped videos)</string>
    <string name="gallery_download">Download</string>
    <string name="gallery_delete">Delete</string>
    <string name="gallery_cancel">Cancel</string>
    <string name="gallery_no_file_selected">No file selected</string>
    <string name="gallery_share_wifi">Please select Wi-Fi</string>
    <string name="gallery_share_to">Share to...</string>
    <string name="gallery_cannot_view_video">Video preview not supported</string>
    <string name="gallery_cannot_download_video">Cannot download video file</string>
    <string name="image_delete_des">Confirm delete this picture?</string>
    <string name="image_download_msg">Confirm download?</string>
    <string name="no_pics">No pictures to view</string>
    <string name="low_battery">Low battery, please recharge the device.</string>
    <string name="unsupported_mode">The device does not support this operation mode</string>
    <string name="pb_video">Video playback</string>
    <string name="camera_awake_success">Success to awake camera</string>
    <string name="camera_awake_failed">Fail to awake camera</string>
    <string name="dialog_delete_all">All delete</string>
    <string name="dialog_awake_all">All awake</string>
    <string name="camera_awake">Awake camera</string>
    <string name="camera_sleep">Sleep camera</string>
    <string name="camera_sleep_alert">Connect to camera will awake camera in sleep mode, comfirm to do?</string>
    <string name="wb_auto">AUTO</string>
    <string name="wb_daylight">Daylight</string>
    <string name="wb_cloudy">Cloudy</string>
    <string name="wb_fluorescent">Fluorescent</string>
    <string name="wb_incandescent">Incandescent</string>
    <string name="burst_off">OFF</string>
    <string name="burst_3">3 photos</string>
    <string name="burst_5">5 photos</string>
    <string name="burst_10">10 photos</string>
    <string name="burst_7">7 photos</string>
    <string name="burst_15">15 photos</string>
    <string name="burst_30">30 photos</string>
    <string name="burst_hs">Continuous</string>
    <string name="datestamp_off">OFF</string>
    <string name="datestamp_date">Date</string>
    <string name="datestamp_date_and_time">Date and time</string>
    <string name="frequency_50hz" translatable="false">50HZ</string>
    <string name="frequency_60hz" translatable="false">60HZ</string>
    <string name="download_manager">Download Manager</string>
    <string name="download_progress">Has done: $1$    Wait: $2$    Failed: $3$</string>
    <string name="downloading_quit">All task of downloading will be cancelled, are you sure?</string>
    <string name="check_wifi_policy">Please keep Wi-Fi connected</string>
    <string name="setting_preview_cache_duration">Preview cache duration</string>
    <string name="setting_time_lapse_interval">Time lapse interval</string>
    <string name="setting_time_lapse_interval_off">OFF</string>
    <string name="setting_time_lapse_interval_2s">2 Sec</string>
    <string name="setting_time_lapse_interval_5s">5 Sec</string>
    <string name="setting_time_lapse_interval_10s">10 Sec</string>
    <string name="setting_time_lapse_interval_20s">20 Sec</string>
    <string name="setting_time_lapse_interval_30s">30 Sec</string>
    <string name="setting_time_lapse_interval_1m">1 Min</string>
    <string name="setting_time_lapse_interval_5m">5 Min</string>
    <string name="setting_time_lapse_interval_10m">10 Min</string>
    <string name="setting_time_lapse_interval_30m">30 Min</string>
    <string name="setting_time_lapse_interval_1hr">60 Min</string>
    <string name="setting_time_lapse_duration">Time lapse duration</string>
    <string name="menu_list">List</string>
    <string name="text_panorama">Panorama</string>
    <string name="text_stablization">Stablization</string>
    <string name="type_grid_view">Grid view</string>
    <string name="type_list_view">List view</string>
    <string name="type_quick_list_view">List quick view</string>
    <string name="more_settings">More settings</string>
</resources>