<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:ProgressWheel="http://schemas.android.com/apk/res-auto"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/black"
                app:layout_behavior="@string/appbar_scrolling_view_behavior"
                tools:context=".ui.activity.LocalVideoPbActivity">

    <com.tinyai.libmediacomponent.components.media.VideoPlayerView
        android:id="@+id/video_player_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <ImageButton
        android:id="@+id/panorama_type_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_centerVertical="true"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:background="@color/full_transparent"
        android:padding="5dp"
        android:src="@drawable/panorama"
        android:text="@string/text_panorama"
        android:textColor="@color/white" />

    <LinearLayout
            android:id="@+id/more_setting_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:orientation="vertical"
            android:background="@color/half_transparent_grey"
            android:visibility="gone"
            >
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:text="@string/more_settings"
                    android:textSize="@dimen/second_title_size"
                    android:textColor="@color/white"/>
                <ImageButton
                    android:id="@+id/cancel_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:background="@drawable/selector_transparent2gray"
                    android:padding="14dp"
                    android:src="@drawable/ic_clear_white_24dp"/>
            </RelativeLayout>
            <TextView
                android:id="@+id/delete_txv"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_centerVertical="true"
                android:gravity="center_vertical"
                android:text="@string/gallery_delete"
                android:textColor="@color/graywhite"
                android:layout_marginLeft="20dp"
                android:textSize="@dimen/second_title_size"
                android:visibility="gone"/>

            <RelativeLayout
                android:id="@+id/eis_layout"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:visibility="visible">
                <TextView
                    android:id="@+id/eis_txv"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_centerVertical="true"
                    android:gravity="center_vertical"
                    android:text="@string/text_stablization"
                    android:textColor="@color/graywhite"
                    android:layout_marginLeft="20dp"
                    android:textSize="@dimen/second_title_size"/>

                <Switch
                    android:id="@+id/eis_switch"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_alignParentRight="true"
                    android:layout_marginRight="20dp"
                    android:checked="false"
                    />
            </RelativeLayout>
        </LinearLayout>

</RelativeLayout>
